# VoxelShift

./: .gitignore  CONVERSION.md  LICENSE  README.md  pubspec.yaml  voxelshift.code-workspace
.github/workflows/: auto_tag_release.yml  build_and_release.yml
android/app/: build.gradle.kts
assets/: COPYRIGHT_NOTICE
distribution/: build_msi.bat  build_msi.ps1
distribution/msi/: AppFiles.wxs  generate_wix_images.dart  installer.wxs
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/conversion/: conversion.dart  conversion_analytics.dart  conversion_worker.dart  converter.dart  ctb_parser.dart  layer_encoder.dart  layer_processor.dart  nanodlp_file_writer.dart  native_area_stats.dart  native_gpu_accel.dart  native_layer_batch_process.dart  native_png_encode.dart  native_png_recompress.dart  native_rle_decode.dart  native_zip_writer.dart  (+3 more)
lib/ui/: theme.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner/: Info.plist
macos/Runner.xcodeproj/: project.pbxproj
native/: area_stats.c  config.h  gpu_accel.c  gpu_cuda_tensor_scanline.c  gpu_opencl_scanline.c  layer_pipeline.c  png_encode.c  png_recompress.c  rle_decode.c  thread_priority.c  voxelshift_native.h  zip_writer.c
native/cuda_kernel/: CMakeLists.txt  vs_cuda_tensor_kernel.cu
test/: benchmark_large.dart  convert_ctb.dart  ctb_conversion_test.dart  large_file_benchmark.dart  widget_test.dart
tool/: build_cuda_kernel.ps1
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp  utils.cpp  utils.h
(+26 files in other folders)
